--- a/deletion_form.html
+++ b/deletion_form.html
@@ -1,6 +1,1 @@
-<form action="mailto:dynamicjobs.ch@gmail.com" method="post" enctype="text/plain">
-  <h2>Account Deletion Request</h2>
-  <label for="email">Your account email:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <input type="submit" value="Request Account Deletion">
-</form>
+<a href="mailto:deletion@yourdomain.com?subject=Account%20Deletion%20Request&body=Please%20delete%20my%20account.">Request Account Deletion</a>
