--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 l
 <footer>
-  <a href="/politica-de-privacidad.html">Política de Privacidad</a>
+  <a href="/policy_wellnest.txt">Política de Privacidad</a>
 </footer>
