--- a/index.html
+++ b/index.html
@@ -35,4 +35,7 @@
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+  <footer>
+  <a href="policy_wellnest.html">Política de Privacidad</a>
+</footer>
 </html>
