--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+<footer>
+  <a href="policy_wellnest.html">Política de Privacidad</a>
+</footer>
 </body>
 </html>
