--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   
   <script src="flutter_bootstrap.js" async=""></script>
 
-  <footer style="width: 100%; text-align: center; padding: 20px 0; color: #aaa; font-size: 14px; position: absolute; bottom: 0; background-color: #151515; z-index: 9999;">
-    <a href="https://wellnesthabits.vercel.app/privacy.html" target="_blank" style="color: #aaa; text-decoration: underline;">
+  <footer style="width: 100%; text-align: center; padding: 20px 0; color: #aaa; font-size: 14px; background-color: #151515; z-index: 0; margin-top: 40px;">
+    <a href="https://wellnesthabits.vercel.app/privacy-policy" target="_blank" style="color: #aaa; text-decoration: underline;">
       Privacy Policies
     </a>
     <br/>
