--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <script src="flutter_bootstrap.js" async=""></script>
 
   <footer style="width: 100%; text-align: center; padding: 20px 0; color: #aaa; font-size: 14px; background-color: #151515; z-index: 0; margin-top: 40px;">
-    <a href="https://wellnesthabits.vercel.app/privacy-policy" target="_blank" style="color: #aaa; text-decoration: underline;">
+    <a href="https://wellnesthabits.vercel.app/privacy.html" target="_blank" style="color: #aaa; text-decoration: underline;">
       Privacy Policies
     </a>
     <br/>
